header in seatui

--- a/src/app/components/forgotpassword/forgotpassword.component.css
+++ b/src/app/components/forgotpassword/forgotpassword.component.css
@@ -8,6 +8,19 @@
     background-image: url(../../../assets/login_image.jpg);
    background-color: black;
 }
+.question
+{
+    box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.08);
+        line-height: 5rem;
+        background: #fafafa;
+        border-radius: 5px;
+        width: 30rem;
+        padding: 18px;
+        font-size: 1.6rem;
+        color: #666;
+        border: none;
+        border-radius: 5px;
+}
 .logincontainer
 {
     display: flex;
