--- a/src/app/components/seatui/seatui.component.html
+++ b/src/app/components/seatui/seatui.component.html
@@ -1,4 +1,9 @@
-
+<header>
+    <div class="logo">
+        <a [routerLink]="['/']"> Traveller Details </a>   
+     </div>
+    
+ </header> 
 <div class="parent">
     <div class="airplane-seatswrapper">   
         <div class="cockpit"> 
