--- a/src/app/components/seatui/seatui.component.css
+++ b/src/app/components/seatui/seatui.component.css
@@ -1,3 +1,68 @@
+/* Header */
+header 
+{
+    display: flex;
+    align-items: center;
+    height: 6.5rem;
+    background-color: #111;
+    width: 100%;
+    color: white;
+    position: relative;
+}
+
+.logo 
+{
+    padding-left: 3rem;
+}
+.nav-items
+{
+    position: absolute;
+    right: 2rem;
+}
+
+.nav-items>a
+{
+    padding: 0 3rem;
+    cursor: pointer;
+}
+
+ul { 
+    padding: 0; 
+    list-style: none; 
+    display: table;
+    text-align: center;
+  }
+  li { 
+    display: table-cell; 
+    position: relative; 
+    padding: 15px 0;
+  }
+  a {
+    color: #fff;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 0.25rem;
+    display: inline-block;
+    padding: 15px 20px;
+    position: relative;
+  }
+  a:after {    
+    background: none repeat scroll 0 0 transparent;
+    bottom: .5rem;
+    content: "";
+    display: block;
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    background: #fff;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+  }
+  a:hover:after { 
+    width: 90%; 
+    left: 1rem; 
+  }
+
 .parent
 {
    display: flex;
