update sidebar component add cancellation page route

--- a/src/app/components/dashboard/sidebar/sidebar.component.html
+++ b/src/app/components/dashboard/sidebar/sidebar.component.html
@@ -10,6 +10,9 @@
             <a [routerLink]="['/flight/user/details/card']"> <i class="fa fa-credit-card ico "></i> Credit Card Details </a>
         </div>
         <div class="section">
+            <a [routerLink]="['/flight/user/dashboard/cancelled']"> <i class="fa fa-calendar ico"></i> Cancellation History </a>
+        </div>
+        <div class="section">
             <a><i class="fa fa-sign-out ico" ></i>  Logout </a> 
         </div>
     </div>
