--- a/src/app/components/forgotpassword/forgotpassword.component.html
+++ b/src/app/components/forgotpassword/forgotpassword.component.html
@@ -13,21 +13,22 @@
                     <small *ngIf="email_id.errors?.pattern">This is not a valid Email</small>
                 </div>
             </div>
-            <div class="inputcontainer">
-                    <select name="security_question" class='question' id="question">
-                        <option value="" Selected disabled>Select your Security Question</option>
-                        <option value="What was your first school?">What was your first school?</option>
-                        <option value="What is your favorite color?">What is your favorite color?</option>
-                        <option value="What is you nick name?">What is you nick name?</option>
-                        <option value="What is your lucky number?">What is your lucky number?</option>
-                    </select>
+            <div class="inputcontainer" *ngIf = "successmsg">
+                <label class="label">OTP</label>
+                <input type='email' class='loginform__input' name="otp" autoComplete="off" required ngModel
+                    #otp="ngModel" >
+                <div *ngIf="otp.invalid && (otp.dirty || otp.touched ||f.submitted)">
+                    <small>
+                        <mat-error *ngIf="otp.errors?.required">Otp is a required field</mat-error>
+                    </small>
+                </div>
             </div>
-             <div class="inputcontainer">
-                    <label class="label" for="Answer"autoComplete="off">Answer</label>
-                        <input type="text" class='loginform__input' >    
-            </div>
+            
+            
 
-            <button type="submit" class="submitbtn"> Reset </button>
+            <button type="submit" class="submitbtn" *ngIf = "!successmsg"> Send OTP </button>
+            <button type="submit" class="submitbtn" *ngIf = "successmsg"> Verify OTP </button>
+
 
         </form>
 
