--- a/src/app/components/seatui/seatui.component.css
+++ b/src/app/components/seatui/seatui.component.css
@@ -160,7 +160,7 @@ ul {
 
 .reserved 
 {
-    background-color: green;
+    background-color: green !important;
     color: floralwhite;
 }
 /***********Footer********/
