--- a/src/app/components/passengers/passengers.component.html
+++ b/src/app/components/passengers/passengers.component.html
@@ -1,5 +1,10 @@
 <app-header *ngIf="!isLoggedIn"></app-header>
  <app-loggedinheader *ngIf="isLoggedIn == true"></app-loggedinheader>
+ <header>
+    <div class="logo">
+        <a>Traveller Details </a>   
+     </div>
+</header> 
 
 <div class="passengercontainer">
     <div class="passengerwrapper">
