--- a/src/app/components/paymentui/paymentui.component.html
+++ b/src/app/components/paymentui/paymentui.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="logo">
-        <a [routerLink]="['/']"> LOGO </a>   
+        <a > Payment </a>   
      </div>
  </header> 
 
