--- a/src/app/components/seatui/seatui.component.html
+++ b/src/app/components/seatui/seatui.component.html
@@ -1,6 +1,7 @@
+<app-loggedinheader></app-loggedinheader>
 <header>
     <div class="logo">
-        <a [routerLink]="['/']"> Traveller Details </a>   
+        <a>Traveller Details </a>   
      </div>
     
  </header> 
