--- a/src/app/components/loggedinheader/loggedinheader.component.html
+++ b/src/app/components/loggedinheader/loggedinheader.component.html
@@ -1,10 +1,10 @@
 <header>
     <div class="logo">
-        <a [routerLink]="['/']"> LOGO </a>   
+        <a [routerLink]="['/']"><img style="width: 6rem; height: 6rem;" src="../../../assets/logo3.png"></a>     
      </div>
     <div class="nav-items">
         <ul>
-            <li><a [routerLink]="['/flight/search']">Search</a></li>
+            <li><a [routerLink]="['']">Search</a></li>
             <li><a (click) = "handlelogout()">Logout</a></li>
             <li><a [routerLink]="['/flight/user/dashboard']" class="avatar"><fa-icon [icon]="faUser"></fa-icon></a></li>
         </ul>
