--- a/src/app/components/dashboard/flightdata/flightdata.component.css
+++ b/src/app/components/dashboard/flightdata/flightdata.component.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+
 }
 
 .cardwrapper
@@ -16,12 +17,12 @@
 .menu
 {
     width: 100%;
+    min-height: 100vh;
     max-height: 100vh;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
-    padding: 3rem;
     overflow-y: scroll;
 }
 
