--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -16,7 +16,7 @@
       <a [routerLink]="['/']"> <img style="width: 10rem; height: 10rem;" src="../../../assets/logo3.png"> </a>   
     </div>
     <div class="nav-items">
-        <a (click) = "handlelogout()">Logout</a>
+        <a (click) = "handlelogout()" style="cursor: pointer;">Logout</a>
         <a [routerLink]="['/flight/user/dashboard']" class="avatar"><fa-icon [icon]="faUser"></fa-icon></a> 
       </div>
   </nav>
