--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -5,8 +5,25 @@
     justify-content: center;
     min-height: 100vh;
     padding: 2rem;
-    background-image: url(../../../assets/login_image.jpg);
-   background-color: black;
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.5)), url(../../../assets/login_image.jpg);
+    background-color: black;
+   position: relative;
+
+}
+.logo 
+{
+    position: absolute;
+    top: 0rem;
+    left: 1rem;
+    width: 10rem;
+    height: 10rem;
+    outline: none;
+    cursor: pointer;
+}
+.logo > img 
+{
+    width: 100%;
+    height: 100%;
 }
 .logincontainer
 {
