fixed spelling and color on dashboard

--- a/src/app/components/dashboard/cancellations/cancellations.component.html
+++ b/src/app/components/dashboard/cancellations/cancellations.component.html
@@ -53,7 +53,7 @@
                             <strong>{{a.booking_date|date}}</strong>
                         </div>
                         <div class="flightdetail timecontainer">
-                            <small>Number of Seatst</small>
+                            <small>Number of Seats</small>
                             <strong>{{a.number_of_seats}}</strong>
                         </div>
                     </div>
