--- a/src/app/components/dashboard/sidebar/sidebar.component.css
+++ b/src/app/components/dashboard/sidebar/sidebar.component.css
@@ -23,7 +23,7 @@
 .dashboard--menu-wrapper
 {
     height: 100vh;
-    background-color: red;
+    background-color:#003366;
     color: #333;
     font-family: 'Poppins';
     width: 100%;
