update forgotpwd,resetpwd decrease the font size of error messages

--- a/src/app/components/forgotpassword/forgotpassword.component.css
+++ b/src/app/components/forgotpassword/forgotpassword.component.css
@@ -91,6 +91,11 @@
     font-size: 1.6rem;
     margin-top: 3rem;
 }
+small 
+{
+    padding-top: 1rem;
+    font-size: 1.3rem;
+}
 /**********************************************/
 @media screen and (max-width:500px)
 {
