--- a/src/app/components/resetpassword/resetpassword.component.css
+++ b/src/app/components/resetpassword/resetpassword.component.css
@@ -93,6 +93,10 @@
     font-size: 1.6rem;
     margin-top: 3rem;
 }
+small
+{
+    font-size: 1.3rem;
+}
 /**********************************************/
 @media screen and (max-width:500px)
 {
