add ai to flight number on cancellation component

--- a/src/app/components/dashboard/cancellations/cancellations.component.html
+++ b/src/app/components/dashboard/cancellations/cancellations.component.html
@@ -14,7 +14,7 @@
                     </div>
                     <div class="flightdetail titleheader">
                         <small>flight</small>
-                        <strong>{{a.flight_number}}</strong>
+                        <strong>{{'AI ' + a.flight_number}}</strong>
                     </div>
                 </div>
                 <div class="Location">
