apply flexbox to error div in signup component

--- a/src/app/components/signup/signup.component.css
+++ b/src/app/components/signup/signup.component.css
@@ -132,6 +132,12 @@
     font-size: 1.6rem;
     margin-top: 1rem;
 }
+div>small
+{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
 @media screen and (max-width:1200px)
 {
     .Hero
