--- a/src/app/components/adminlogin/adminlogin.component.html
+++ b/src/app/components/adminlogin/adminlogin.component.html
@@ -1,3 +1,5 @@
+<app-adminheader></app-adminheader>
+ 
 <div class="loginwrapper">
     <div class="logincontainer">
         <h1 class='loginform__heading'>Admin Login</h1>
@@ -37,3 +39,4 @@
 
     </div>
 </div>
+<app-adminfooter></app-adminfooter>
