--- a/src/app/components/addflight/addflight.component.html
+++ b/src/app/components/addflight/addflight.component.html
@@ -1,3 +1,5 @@
+<app-adminheader *ngIf="!isLoggedIn"></app-adminheader>
+ <app-adminloggedinheader *ngIf="isLoggedIn == true"></app-adminloggedinheader>
 <div class="bg">
     <div class="container">
         
@@ -160,3 +162,4 @@
         </form>
     </div>
 </div>
+<app-adminfooter></app-adminfooter>
