--- a/src/app/components/deleteflight/deleteflight.component.css
+++ b/src/app/components/deleteflight/deleteflight.component.css
@@ -14,6 +14,12 @@
      margin-top: 10%;
      margin-bottom: 13%;
  }  
+ .head_logo
+{
+    padding-top: 10px;
+    height: 5rem;
+    cursor: pointer;
+}
  .h1
  {
     font-family: 'Rubik', sans-serif;
@@ -80,6 +86,8 @@
      color:white;
    background-color: rgb(182, 69, 69);
  }
+ 
+
  @media screen and (max-width:1250px)
  {
      .bg
