--- a/src/app/components/updateflight/updateflight.component.html
+++ b/src/app/components/updateflight/updateflight.component.html
@@ -1,3 +1,6 @@
+<app-adminheader *ngIf="!isLoggedIn"></app-adminheader>
+ <app-adminloggedinheader *ngIf="isLoggedIn == true"></app-adminloggedinheader>
+
 <div class="bg">   
     <div class="container">
         <div *ngIf="updateflight">
@@ -148,3 +151,4 @@
         </div>
     </div>
 </div> 
+<app-adminfooter></app-adminfooter>
