apply regex to password on signup and resetpassword page

--- a/src/app/components/resetpassword/resetpassword.component.css
+++ b/src/app/components/resetpassword/resetpassword.component.css
@@ -96,6 +96,10 @@
 small
 {
     font-size: 1.3rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-top: 1rem;
 }
 /**********************************************/
 @media screen and (max-width:500px)
