--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -67,12 +67,13 @@
                         <label class="label">Password</label>
                         <input class="input--style-4"  [type]="visible ? 'text' : 'password'" name="password" required 
                             autocomplete="off" ngModel #password = "ngModel" 
-                            minlength="8">
+                            minlength="8"  pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,}">
                         <fa-icon [icon]  =  "visible ? faEye : faEyeSlash"  (click) = "onClick()" class="loginform__toggleicon"></fa-icon>
 
                         <div *ngIf="password.invalid && (password.dirty || password.touched ||f.submitted)">
                             <small *ngIf="password.errors?.required">Password is required</small>
                             <small *ngIf="password.errors?.minlength">Password must be at least 8 charachters</small>
+                            <small *ngIf="password.errors?.pattern">Alphanumeric with at least 1 special & uppercase character</small>
                         </div>
 
                      </div> 
