--- a/src/app/components/adminheader/adminheader.component.html
+++ b/src/app/components/adminheader/adminheader.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="logo">
-        <a [routerLink]="['/']"> LOGO </a>   
+        <a [routerLink]="['/']"><img style="width: 6rem; height: 6rem;" src="../../../assets/logo3.png"></a>   
     </div>
     <div class="nav-items">
         <ul>
