--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,7 +6,7 @@
             <div class="fa fa-google"></div>
         </div>
         <div class="copyrighttext">
-            © 2020 LOREM IPSUM PVT. LTD.<br>
+            ©Copyright 2021 ASAY Airlines. All rights reserved.<br>
             Country India 
         </div>
     </div>
