corrected thursday value

--- a/src/app/components/addflight/addflight.component.html
+++ b/src/app/components/addflight/addflight.component.html
@@ -79,7 +79,7 @@
                                 [(ngModel)]="addflight.Tuesday"  /> Tuesday </li>
                             <li><input type="checkbox" name="Wednesday" #days="ngModel"
                                 [(ngModel)]="addflight.Wednesday" /> Wednesday </li>
-                            <li><input type="checkbox" name="Thrusday" #days="ngModel"
+                            <li><input type="checkbox" name="Thursday" #days="ngModel"
                                 [(ngModel)]="addflight.Thursday" /> Thursday </li>
                             <li><input type="checkbox" name="Friday" #days="ngModel"
                                 [(ngModel)]="addflight.Friday" /> Friday </li>
