--- a/src/app/components/updateflight/updateflight.component.html
+++ b/src/app/components/updateflight/updateflight.component.html
@@ -67,7 +67,7 @@
                                     [(ngModel)]="updateflight.Tuesday"  /> Tuesday </li>
                                 <li><input type="checkbox" name="Wednesday" #days="ngModel"
                                     [(ngModel)]="updateflight.Wednesday" /> Wednesday </li>
-                                <li><input type="checkbox" name="Thrusday" #days="ngModel"
+                                <li><input type="checkbox" name="Thursday" #days="ngModel"
                                     [(ngModel)]="updateflight.Thursday" /> Thursday </li>
                                 <li><input type="checkbox" name="Friday" #days="ngModel"
                                     [(ngModel)]="updateflight.Friday" /> Friday </li>
