--- a/src/app/components/passengers/passengers.component.css
+++ b/src/app/components/passengers/passengers.component.css
@@ -153,12 +153,17 @@ header
     font-weight: 400 !important;
   }
 /********card-header****************/
+.passenger__summary 
+{
+    position: relative;
+}
 .passenger__summary__headingcontainer
 {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    height: 8rem;
 }
 .passenger__summary__headingcontainer--count
 {
@@ -210,14 +215,15 @@ form
     padding: 0 12px;
     border-radius: 20px;
     line-height: 18px;
-    height: 18px;
+    height: 18px;   
     position: absolute;
     display: flex;
     align-items: center;
     color: #fff;
     background-image: linear-gradient(260deg,#ff3e5e,#ff7f3f);
-    right: 1rem;
+    right: 0.5rem;
     font-family: 'poppins';
+    top: 5rem;
 }
 
 /************card-body***************/
