update seatui.component.ts add regex to verify contact information details

--- a/src/app/components/seatui/seatui.component.html
+++ b/src/app/components/seatui/seatui.component.html
@@ -110,7 +110,7 @@
             </div>
             <div class="legendwrapper">
                 <div class="seatblock" style="background-color: white;"></div>
-                <span>Unreserved</span>
+                <span>{{seatclass == "business" ? "economy" : seatclass == "economy" ? "business" : undefined }}</span>
             </div>
             <div class="legendwrapper">
                 <div class="seatblock choosen" ></div>
